2002-02-13  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: fixed screen offset in 32bpp (thanks to Suzanne Archibald)
* atari_sdl.c: fixed sound initialisation (thanks to Tomas Mraz)
* pokey.c: fixed sound channel 1 in stereo mode (thanks to Radek Sterba)

2002-02-04  Piotr Fusik  <fox@scene.pl>
* DOC/BUGS: updated list of games

2002-01-10  Jindrich Kubec <kubecj@asw.cz>
* new cartridge type added
* last #include "zlib.h" found and fixed.

** released as 1.2.2

2001-12-31  Petr Stehlik  <pstehlik@sophics.cz>
* renamed cpu_m68k.s to cpu_m68k.asm because it's not in gas format
* renamed *.s files in falcon/ to *.asm (same as above)
* updated Makefile.in to run xgen on *.asm files only

2001-12-29  Petr Stehlik  <pstehlik@sophics.cz>
* joysticks (both real and keyboard) in SDL port fixed.
* configure now allows to --enable-CPUASS for m68k assembler CPU core.

2001-12-24  Jakub Bogusz <qboosh@pld.org.pl>
* memory corruption in input.c (joystick checking) fixed.

2001-12-17  Petr Stehlik  <pstehlik@sophics.cz>

* configure.in changed so it doesn'ta ask any questions by default
  Use --enable-FEATURE or --disable-FEATURE.
* configure.in updated for better Falcon support

2001-12-08  Krzysztof Nikiel  <knik@poczta.onet.pl>

* acconfig.h: unused symbol COMPILED_PALETTE removed
* win32/atari1.ico: new windows icon (actually an old one but modified)
* win32/atari.rc: new icon included

2001-12-07  Piotr Fusik  <fox@scene.pl>

* cpu.c: #include <stdlib.h> for exit()
* rtime.c: #include <string.h> for strcmp()

2001-12-04  Jacek Poplawski  <jpopl@interia.pl>

* log.c, log.h: fixed undefined Aflushlog
* atari_sdl.c: cleanups for readability

2001-12-04  Petr Stehlik  <pstehlik@sophics.cz>

* util/sethdr, util/act2html.c: added Nathan's sethdr perl script and Piotr's
  act2html C code
* SDL port now calls Aflushlog() before it exits
* fixed win32 compile and runtime problems (thanks to Nathan)

2001-12-03  Petr Stehlik  <pstehlik@sophics.cz>
